samples/_failures_safe/1761158284_3867ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0adab419.c: In function ‘main’:
./samples/SAFE/__tmp_0adab419.c:158:43: error: expected ‘)’ at end of input
  158 |                 if (matrix_multiply(&a, &b
      |                                    ~      ^
      |                                           )
./samples/SAFE/__tmp_0adab419.c:158:21: error: too few arguments to function ‘matrix_multiply’
  158 |                 if (matrix_multiply(&a, &b
      |                     ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0adab419.c:64:5: note: declared here
   64 | int matrix_multiply(const Matrix* a, const Matrix* b, Matrix* result) {
      |     ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0adab419.c:158:17: error: expected declaration or statement at end of input
  158 |                 if (matrix_multiply(&a, &b
      |                 ^~
./samples/SAFE/__tmp_0adab419.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0adab419.c:158:17: error: expected declaration or statement at end of input
